@@ -6,12 +6,17 @@
 
     <groupId>com.github.esslerc.pdfamaker</groupId>
     <artifactId>pdfa-maker</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0</version>
 
     <properties>
         <maven.compiler.source>22</maven.compiler.source>
         <maven.compiler.target>22</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+        <maven.compiler.plugin.version>3.13.0</maven.compiler.plugin.version>
+        <maven.jar.plugin.version>3.4.1</maven.jar.plugin.version>
+        <maven.dependency.plugin.version>3.7.1</maven.dependency.plugin.version>
+        <exec.maven.plugin.version>3.3.0</exec.maven.plugin.version>
 
         <openjfx.version>22.0.1</openjfx.version>
         <pdfbox.version>2.0.31</pdfbox.version>
@@ -20,6 +25,7 @@
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>22</java.version>
+
         <main.class>com.github.esslerc.pdfamaker.Main</main.class>
     </properties>
 
@@ -59,16 +65,17 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.13.0</version>
+                <version>${maven.compiler.plugin.version}</version>
                 <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
+                    <source>22</source>
+                    <target>22</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>3.4.1</version>
+                <version>${maven.jar.plugin.version}</version>
                 <configuration>
                     <archive>
                         <manifest>
@@ -80,7 +87,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
-                <version>3.7.1</version>
+                <version>${maven.dependency.plugin.version}</version>
                 <executions>
                     <execution>
                         <id>copy-dependencies</id>
@@ -97,7 +104,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
-                <version>3.3.0</version>
+                <version>${exec.maven.plugin.version}</version>
                 <executions>
                     <execution>
                         <id>create-runtime-image</id>
@@ -164,7 +171,7 @@
                                         <argument>--runtime-image</argument>
                                         <argument>${project.build.directory}/runtime</argument>
                                         <argument>--app-version</argument>
-                                        <argument>1.0</argument>
+                                        <argument>${project.version}</argument>
                                         <argument>--vendor</argument>
                                         <argument>esslerc</argument>
                                         <argument>--mac-package-name</argument>
@@ -218,7 +225,7 @@
                                         <argument>--runtime-image</argument>
                                         <argument>${project.build.directory}/runtime</argument>
                                         <argument>--app-version</argument>
-                                        <argument>1.0</argument>
+                                        <argument>${project.version}</argument>
                                         <argument>--vendor</argument>
                                         <argument>esslerc</argument>
                                     </arguments>
@@ -268,7 +275,7 @@
                                         <argument>--runtime-image</argument>
                                         <argument>${project.build.directory}/runtime</argument>
                                         <argument>--app-version</argument>
-                                        <argument>1.0</argument>
+                                        <argument>${project.version}</argument>
                                         <argument>--vendor</argument>
                                         <argument>esslerc</argument>
                                     </arguments>
